
Version 1.1.2

    - Use new custom hash table implementation; this removes glib dependency.
    - Use FUSE version 25 API so code builds on older O/S distributions.

Version 1.1.1 (r202) released 5 Aug 2008

    - Added `--ssl' as an alias for `--baseURL https://s3.amazonaws.com/'.
    - Added `--insecure' and `--cacert' flags to configure cURL SSL checks.
    - Implemented `--blockCacheWriteDelay' and `--blockCacheTimeout' flags.
    - Implemented read-ahead using `--readAhead' and `--readAheadTrigger' flags.
    - Set FUSE max_readahead option to zero by default since we do it too now.
    - Added new `--test' flag which turns on local test mode.
    - Display the URL, bucket, and prefix in the output of mount(8).
    - Fixed bug where an error during auto-detection would cause a segfault.
    - Fixed bug where read errors from the underlying store were being ignored
      by the block cache layer.

Version 1.1.0 (r150) released 26 July 2008

    - Added a block cache with parallel writes which vastly improves performance.
    - Added a new `stats' file to the filesystem containing various statistics.
    - Added `--noAutoDetect' flag to disable auto-detection at startup.
    - Fixed a few small race conditions and memory leaks.
    - Return zeroes for unwritten blocks with `assumeEmpty'.

Version 1.0.5 (r111) released 15 July 2008

    - Avoid reuse of CURL instance after receiving any HTTP error (issue #3)
    - On MacOS, prevent kernel timeouts prior to our own timeout (issue #2)
    - Replaced `--connectTimeout' and `--ioTimeout' with `--timeout' because
      CURL's I/O timeout includes in it the connection time as well.

Version 1.0.4 (r82) released 9 July 2008

    - Retry on all HTTP error codes, not just 500 or greater. Tests show that
      a valid request can return a 4xx response due to network issues.
    - Added `--fileMode' and `--readOnly' flags.
    - Added `--assumeEmpty' flag.
    - Support 'E' for 'exabytes'.
    - Port to Mac OS (issue #1)
