@@ -2,6 +2,8 @@
 Version 1.1.2
 
     - Use new custom hash table implementation; this removes glib dependency.
+    - Fix bug where the zero block optimization got disabled when the
+      MD5 cache was disabled.
     - Use FUSE version 25 API so code builds on older O/S distributions.
 
 Version 1.1.1 (r202) released 5 Aug 2008
